--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,7 +25,8 @@ http {
         root         /www;
         # include /etc/nginx/default.d/*.conf;
         location / {
-
+            index index.php;
+            try_files $uri $uri/ $uri.php =404;
         }
         error_page 404 /404.html;
             location = /40x.html {
